--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/gun": "^0.9.3",
     "@types/marked": "^2.0.4",
     "@types/node": "^16.6.1",
     "marked-terminal": "^4.1.1",
@@ -11,7 +12,8 @@
   "dependencies": {
     "express": "4.17.1",
     "gun": "^0.2020.1232",
-    "marked": "^2.1.3"
+    "marked": "^2.1.3",
+    "python-shell": "^3.0.0"
   },
   "keywords": [],
   "author": "",
