--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
+    "axios": "^0.21.4",
+    "dotenv": "^10.0.0",
     "express": "4.17.1",
     "gun": "^0.2020.1232",
     "marked": "^2.1.3",
