--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
     "axios": "^0.21.4",
+    "bufferutil": "^4.0.3",
+    "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "express": "4.17.1",
     "gun": "^0.2020.1232",
     "marked": "^2.1.3",
-    "python-shell": "^3.0.0"
+    "python-shell": "^3.0.0",
+    "text-encoding": "^0.7.0",
+    "utf-8-validate": "^5.0.5"
   },
   "keywords": [],
   "author": "",
