docker-compose.yaml: added image of myriad-claimer on dockerhub to express service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     ports:
       - "8765:8765"
   express:
+    image: myriadsocial/myriad-claimer
     build: .
     ports:
       - 5001:5001
